frontend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend
spec:
  parentRefs:
    - namespace: nginx-gateway
      name: inference-gateway
      sectionName: client-side
  hostnames:
    - "frontend.ngf-agentic-reference-stack.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 80
